<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_100"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_101"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_item101" />
        <item
            android:id="@+id/nav_102"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_item102" />
        <item
            android:id="@+id/nav_103"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_item103" />
        <item
            android:id="@+id/nav_104"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_item104" />
    </group>

    <item
        android:id="@+id/nav_200"
        android:title="@string/menu_group2">
        <menu>
            <item
                android:id="@+id/nav_201"
                android:icon="@android:drawable/star_big_on"
                android:title="@string/menu_item201" />
            <item
                android:id="@+id/nav_202"
                android:icon="@android:drawable/star_big_on"
                android:title="@string/menu_item202" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_300"
        android:title="@string/menu_group3"
        android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/nav_301"
                android:icon="@android:drawable/star_big_on"
                android:title="@string/menu_item301" />
            <item
                android:id="@+id/nav_302"
                android:icon="@android:drawable/star_big_on"
                android:title="@string/menu_item302" />
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/nav_401"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_item401" />
        <item
            android:id="@+id/nav_402"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_item402" />

    </group>
</menu>
