<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="10dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/groupname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_group"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_site"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/org_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_org"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_wrapper"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_note"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/linkBlue"
            android:textSize="15sp"
            android:text="SAVE"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/save"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red3"
            android:textSize="15sp"
            android:text="DELETE"
            android:layout_marginLeft="10dp"
            android:id="@+id/delete"/>

    </RelativeLayout>

</LinearLayout>


